--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -15,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YourPlace"
         tools:targetApi="31">
+        <activity
+            android:name=".confirmarDatosDeCita"
+            android:exported="false" />
         <activity
             android:name=".publicar_anuncio"
             android:exported="false" />
