Todo mejorado aun xD

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:theme="@style/Theme.YourPlace"
         tools:targetApi="31">
         <activity
+            android:name=".selPromocion"
+            android:exported="false" />
+        <activity
+            android:name=".perfil_usuario"
+            android:exported="false" />
+        <activity
             android:name=".ver_promociones"
             android:exported="false" />
         <activity
