--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ver_notificaciones"
+            android:exported="false" />
+        <activity
             android:name=".interfaz_ver_chats"
             android:exported="false" />
         <activity
